--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
     "eslint": "^9.39.2",
     "globals": "^17.0.0",
     "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
