--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "pino": "^10.1.0"
   }
 }
