--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "pino": "^10.1.0"
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3"
   }
 }
