--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "helmet": "^8.1.0",
     "http-errors": "^2.0.1",
     "mongoose": "^9.1.4",
+    "nodemailer": "^8.0.1",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3"
